translate deez nuts

--- a/public/locales/ar/analysis.json
+++ b/public/locales/ar/analysis.json
@@ -3,7 +3,8 @@
   "orderHistory": {
     "from": "من",
     "to": "إلى",
-    "footer": "إجمالي المبيعات",
+    "footer": "إجمالي المباع",
+    "action": "عرض التاريخ",
     "historyItem": {
       "meta": {
         "createdAt": "تم الإنشاء في",
@@ -13,5 +14,9 @@
         "header": ["الاسم", "السعر", "الكمية", "الإجمالي"]
       }
     }
+  },
+  "graphs": {
+    "sold": "المبيعات اليومية",
+    "profit": "الربح اليومي"
   }
 }
