--- a/public/locales/en/settings.json
+++ b/public/locales/en/settings.json
@@ -9,7 +9,7 @@
       },
       "printPolicey": {
         "header": "Print Policy",
-        "options": ["Always Ask", "Off"]
+        "options": { "always": "Always Ask", "off": "Off" }
       }
     }
   },
