init spendings modal

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -82,6 +82,7 @@
       "products": "المنتجات",
       "category": "الفئات",
       "anal": "التحليل",
+      "spendings": "المصروفات",
       "settings": "الإعدادات"
     },
     "actions": { "logout": "تسجيل الخروج" }
