--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -75,6 +75,41 @@
       "put": "Update"
     }
   },
+  "expensesModal": {
+    "typeModal": {
+      "headerName": {
+        "post": "Add New Expense Type",
+        "put": "Update Expense Type"
+      },
+      "props": {
+        "name": "Name",
+        "id": "ID",
+        "description": "Description"
+      },
+      "action": {
+        "post": "Add",
+        "put": "Update"
+      }
+    },
+    "storeModal": {
+      "headerName": {
+        "post": "Add New Expense Store",
+        "put": "Update Expense Store"
+      },
+      "props": {
+        "name": "Name",
+        "id": "ID",
+        "description": "Description",
+        "amount": "Amount",
+        "remindAt": "Remind At",
+        "typeId": "Type"
+      },
+      "action": {
+        "post": "Add",
+        "put": "Update"
+      }
+    }
+  },
   "sidebar": {
     "header": "Zagy",
     "paths": {
@@ -82,6 +117,7 @@
       "products": "Products",
       "category": "Categories",
       "anal": "Analysis",
+      "spendings": "spendings",
       "settings": "Settings"
     },
     "actions": { "logout": "Log out" }
@@ -102,6 +138,9 @@
   "pages": {
     "product": {
       "header": "Products"
+    },
+    "spending": {
+      "header": "Spendings"
     }
   }
 }
