feat: - add accordion - support for nested paths in the layout - divide dashbaord/order history into diff pages - divide spendings/losses in diff pages WIP

--- a/public/locales/ar/analysis.json
+++ b/public/locales/ar/analysis.json
@@ -1,6 +1,7 @@
 {
   "header": "تحليل",
   "orderHistory": {
+    "header": "سجل الطلبات",
     "from": "من",
     "to": "إلى",
     "footer": "إجمالي المباع",
