--- a/public/locales/en/analysis.json
+++ b/public/locales/en/analysis.json
@@ -1,6 +1,7 @@
 {
   "header": "Analysis",
   "orderHistory": {
+    "header": "Order History",
     "from": "From",
     "to": "To",
     "footer": "Total Sold",
