--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -92,6 +92,21 @@
       "put": "Update"
     }
   },
+  "offerModal": {
+    "headerName": {
+      "post": "Add New Offer",
+      "put": "Update Offer"
+    },
+    "props": {
+      "id": "ID",
+      "name": "Name",
+      "products": "Products"
+    },
+    "action": {
+      "post": "Add",
+      "put": "Update"
+    }
+  },
   "expensesModal": {
     "typeModal": {
       "headerName": {
@@ -151,7 +166,8 @@
       "category": "Categories",
       "anal": { "index": "Analysis", "history": "History" },
       "spendings": { "index": "spendings", "losses": "Losses" },
-      "settings": "Settings"
+      "settings": "Settings",
+      "offers": "Offers"
     },
     "actions": { "logout": "Log out" }
   },
@@ -166,6 +182,16 @@
       "buyPrice": "Buy Price",
       "sellPrice": "Sell Price",
       "stock": "Stock"
+    },
+    "loss": {
+      "description": "Description",
+      "additionalAmount": "Additional Amount",
+      "products": "Products"
+    },
+    "expenses": {
+      "store": {
+        "amount": "Amount"
+      }
     }
   },
   "pages": {
